--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+##
+spring.profiles.active=local
+logging.config=classpath:logback-${spring.profiles.active}.xml
+
+logging.file.name=swagger-demo.log
+logging.file.path=logs
+
+### Server property
 server.servlet.context-path=/swagger2-demo
 
 server.port=8090
